[tool.poetry]
name = "pgbelt"
version = "0.8.1"
description = "A CLI tool used to manage Postgres data migrations from beginning to end, for a single database or a fleet, leveraging pglogical replication."
authors = ["Varjitt Jeeva <varjitt.jeeva@autodesk.com>"]
readme = "README.md"

packages = [
    { include = "pgbelt", from = "./" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aiofiles = ">=0.8,<24.2"
asyncpg = ">=0.27,<0.31"
pydantic = ">=2.0,<3.0"
tabulate = "^0.9.0"
typer = ">=0.9,<0.14"

[tool.poetry.dev-dependencies]
black = "~24.10.0"
pre-commit = "~4.0.1"
flake8 = "^7.1.1"
pytest-cov = "~6.0.0"
pytest = "^8.3.3"
coverage = {extras = ["toml"], version = "^7.6"}
safety = "^3.2.11"
mypy = "^1.13"
xdoctest = {extras = ["colors"], version = "^1.2.0"}
flake8-bandit = "~4.1.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.14.1"
darglint = "^1.8.1"
reorder-python-imports = "^3.14.0"
pre-commit-hooks = "^5.0.0"
Pygments = "^2.18.0"
pyupgrade = "^3.19.0"
pylint = "^3.3.1"
pytest-asyncio = "~0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
belt = "pgbelt.main:app"
