[tool.poetry]
name = "pgbelt"
version = "0.15.0"
description = "A CLI tool used to manage Postgres data migrations from beginning to end, for a single database or a fleet, leveraging pglogical replication."
authors = ["Varjitt Jeeva <varjitt.jeeva@autodesk.com>"]
readme = "README.md"

packages = [
    { include = "pgbelt", from = "./" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
aiofiles = ">=0.8,<24.2"
asyncpg = ">=0.27,<0.32"
pydantic = ">=2.0,<3.0"
tabulate = "^0.9.0"
typer = ">=0.9,<0.25"

[tool.poetry.dev-dependencies]
black = "~26.1.0"
pre-commit = "~4.5.1"
flake8 = "^7.3.0"
pytest-cov = "~6.2.1"
pytest = "^9.0.2"
coverage = {extras = ["toml"], version = "^7.13"}
safety = "^3.6.1"
mypy = "^1.17"
xdoctest = {extras = ["colors"], version = "^1.2.0"}
flake8-bandit = "~4.1.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.4.0"
pep8-naming = "^0.15.1"
darglint = "^1.8.1"
reorder-python-imports = "^3.15.0"
pre-commit-hooks = "^6.0.0"
Pygments = "^2.19.2"
pyupgrade = "^3.20.0"
pylint = "^4.0.4"
pytest-asyncio = "~1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
belt = "pgbelt.main:app"
